Fix Z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -434,8 +434,8 @@ header p {
 #homeFullScreen .container {
   position:fixed;
   z-index: 0;
-  -webkit-transform: translate3d(0,0,1px);
-  transform: translate3d(0,0,1px);
+  -webkit-transform: translate3d(0,0,0px);
+  transform: translate3d(0,0,0px);
 }
 
 .landing {
